# llama.hlsl

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  llama  main.cpp
DXSample/: CMakeLists.txt  stdafx.h
src/: CMakeLists.txt  D3D12llm.cpp  D3D12llm.h  Main.cpp  main.cpp  matmul.hlsl  rope.hlsl  win.c  win.h
src/assets/: CMakeLists.txt
src/shaders/: Dx12NN.hlsl
